@startuml

title __POINTINGPLAYER's Class Diagram__\n

      class com.example.pointingplayer.Application {
          {static} + main()
          + start()
      }

      class com.example.pointingplayer.Controller {
          ~ saveButton : Button
          - acceptButton : Button
          - declineButton : Button
          - fileName : String
          - filePath : String
          - isPaused : boolean
          - isPressed : boolean
          - isSaved : boolean
          - isSlowed : boolean
          - labelVolume : Label
          - lbPointing : Label
          - lbState : Label
          - lbTime : Label
          - mediaPlayer : MediaPlayer
          - mediaView : MediaView
          - nextButton : Button
          - pathCsv : String
          - playButton : Button
          - pointingCounter : int
          - prevButton : Button
          - repeatButton : Button
          - seekSlider : Slider
          - slider : Slider
          - slowButton : Button
          - stopButton : Button
          - volumeImg : ImageView
          + exitVideo()
          + initialize()
          - aboutClicked()
          - acceptClicked()
          - chooseCSV()
          - declineClicked()
          {static} - formatTime()
          {static} - getTimeString()
          - handleButtonAction()
          - nextPointing()
          - pauseVideo()
          - playVideo()
          - prevPointing()
          - repeatClicked()
          - saveClicked()
          - setIconAccept()
          - setIconDecline()
          - setIconNextPointing()
          - setIconPause()
          - setIconPlay()
          - setIconPrevPointing()
          - setIconRepeat()
          - setIconSave()
          - setIconStop()
          - setIconVolume()
          - setIconVolumeSilent()
          - slowVideo()
          - stopVideo()
      }



      class com.example.pointingplayer.Frame {
          - beginTime : String
          - finishTime : String
          - state : String
          + Frame()
          + getBeginTime()
          + getFinishTime()
          + getState()
          + setState()
          + toString()
    }


      class com.example.pointingplayer.Pointing {
          - pointing : ArrayList<Frame>
          + getBeginTime()
          + getFinishTime()
          + getRow()
          + getSize()
          + getState()
          + modifyRow()
          + setPointing()
          + setState()
      }


  com.example.pointingplayer.Application -up-|> javafx.application.Application
  com.example.pointingplayer.Controller .up.|> javafx.fxml.Initializable
  com.example.pointingplayer.Controller o-- com.example.pointingplayer.Pointing : pointing


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
